assets/css/_govuk_tweaks.scss
html {
    font-size: 100%;
}

.govuk-cookie-banner {
    margin-top: -15px;
    padding-top: 30px;
    padding-bottom: 30px;
    border: none;
    background: #f3f2f1 url("../img/sdgbg.png") bottom left repeat-x;
}

body.js-enabled {
    .js-disabled-only {
        display: none;
    }
}
body:not(.js-enabled) {
    .js-enabled-only {
        display: none;
    }
}

.govuk-fieldset__legend {
    // Override Bootstrap's underlining.
    border-bottom: none;
}

#main-content h2.govuk-notification-banner__title {
    margin-bottom: 0;
}

#cookie-page-form .govuk-notification-banner {
    max-width: 500px;
}

// Contrast fixes.
body.contrast-high {
    .govuk-fieldset__legend, .govuk-label {
        color: white;
    }
    .govuk-cookie-banner {
        background: black url("../img/sdgbg.png") bottom left repeat-x;
    }
    .govuk-notification-banner {
        &, &.govuk-notification-banner--success {
            background-color: #eeeeee;
            border-color: #eeeeee;
            .govuk-notification-banner-title {
                color: black;
            }
            .govuk-notification-banner__link {
                color: #FFDD00;
                &:hover, &:visited {
                    color: #FFDD00;
                }
            }
            .govuk-notification-banner__content {
                background: black;
            }
        }
    }
    .govuk-button {
        background-color: #eeeeee;
        color: black;
        &:hover, &:visited {
            color: black;
        }
        &:hover {
            background-color: #DBDAD9;
        }
    }
    .govuk-link {
        color: #FFDD00;
        &:hover, &:visited {
            color: #FFDD00;
        }
    }
    .govuk-details__summary {
        &:focus {
            .govuk-details__summary-text {
                color: black;
            }
        }
    }
}

